# MH

./: README.md
practicaAlternativaAlExamen/codigo/FUENTES/: CMakeCache.txt  CMakeLists.txt
practicaAlternativaAlExamen/codigo/FUENTES/INCLUDE/: pAlternativa.h
practicaAlternativaAlExamen/codigo/FUENTES/SRC/: main.cpp  util.cpp
practica_alternativa_al_examen/codigo/FUENTES/: Makefile  cmake_install.cmake
practica_alternativa_al_examen/codigo/FUENTES/INCLUDE/: util.h
practica_alternativa_al_examen/codigo/FUENTES/SRC/: pAlternativa.cpp
practicas/codigo/FUENTES/: CMakeCache.txt  CMakeLists.txt  Makefile
practicas/codigo/FUENTES/INCLUDE/: p1.h  p2.h  p3.h  util.h
practicas/codigo/FUENTES/SRC/: main.cpp  p1.cpp  p2.cpp  p3.cpp  util.cpp
